[gd_scene load_steps=2 format=3 uid="uid://buigt660wpk2w"]

[ext_resource type="Script" path="res://Scripts/UI/Menu.gd" id="1_w8nxd"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8nxd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -3.99997
offset_right = 14.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.8555, 1.8555)
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../CreditButton")
text = "Options"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CreditButton")
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 168.0
offset_right = -30.0
offset_bottom = 237.0
grow_horizontal = 2
scale = Vector2(2.85639, 2.44935)
text = "Potion Bar"
fit_content = true
autowrap_mode = 0
tab_size = 7

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
